--- a/book/dasp/02_FIR_design.ipynb
+++ b/book/dasp/02_FIR_design.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -24,6 +24,9 @@
     "from scipy import signal\n",
     "import io\n",
     "from scipy.io import wavfile\n",
+    "import matplotlib\n",
+    "if not hasattr(matplotlib.RcParams, \"_get\"):\n",
+    "    matplotlib.RcParams._get = dict.get\n",
     "from pyodide.http import pyfetch\n",
     "from matplotlib import pyplot as plt\n",
     "from ipywidgets import * # interactive plots\n",
