--- a/book/dasp/03_FilteringSignals.ipynb
+++ b/book/dasp/03_FilteringSignals.ipynb
@@ -20,6 +20,9 @@
     "import numpy as np \n",
     "import scipy as sp\n",
     "from scipy import signal\n",
+    "import matplotlib\n",
+    "if not hasattr(matplotlib.RcParams, \"_get\"):\n",
+    "    matplotlib.RcParams._get = dict.get\n",
     "from matplotlib import pyplot as plt\n",
     "from ipywidgets import * # interactive plots\n",
     "import IPython\n",
