--- a/book/dasp/04_Z_domain.ipynb
+++ b/book/dasp/04_Z_domain.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "{\n",
     "    \"tags\": [\n",
-    "        \"thebe-remove-input-init\",\n",
+    "        \"hide_input\",\n",
     "    ]\n",
     "}\n",
     "\n",
