--- a/book/fundamental/02_Complex_numbers.ipynb
+++ b/book/fundamental/02_Complex_numbers.ipynb
@@ -17,6 +17,9 @@
     "# Starting once again with the imports.\n",
     "%pip install ipympl\n",
     "import numpy as np \n",
+    "import matplotlib\n",
+    "if not hasattr(matplotlib.RcParams, \"_get\"):\n",
+    "    matplotlib.RcParams._get = dict.get\n",
     "from  matplotlib import patches\n",
     "from matplotlib.ticker import FormatStrFormatter\n",
     "from matplotlib import pyplot as plt\n",
