--- a/book/fundamental/05_Fourier_Transform.ipynb
+++ b/book/fundamental/05_Fourier_Transform.ipynb
@@ -17,6 +17,9 @@
     "# Importing the packages as usual\n",
     "%pip install ipympl\n",
     "import numpy as np \n",
+    "import matplotlib\n",
+    "if not hasattr(matplotlib.RcParams, \"_get\"):\n",
+    "    matplotlib.RcParams._get = dict.get\n",
     "from matplotlib import pyplot as plt\n",
     "from  matplotlib import patches, collections\n",
     "from matplotlib.lines import Line2D\n",
