--- a/book/fundamental/06_Sampling.ipynb
+++ b/book/fundamental/06_Sampling.ipynb
@@ -10,13 +10,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Run this cell first to import libraries as usual. We'll need some functions to help import wav files.\n",
     "%pip install ipympl\n",
     "import numpy as np \n",
+    "import matplotlib\n",
+    "if not hasattr(matplotlib.RcParams, \"_get\"):\n",
+    "    matplotlib.RcParams._get = dict.get\n",
     "from scipy import signal\n",
     "from matplotlib import pyplot as plt\n",
     "from matplotlib.collections import LineCollection\n",
