--- a/book/fundamental/09_Time_Freq_Analysis.ipynb
+++ b/book/fundamental/09_Time_Freq_Analysis.ipynb
@@ -19,6 +19,9 @@
    "source": [
     "%pip install ipympl\n",
     "import numpy as np \n",
+    "import matplotlib\n",
+    "if not hasattr(matplotlib.RcParams, \"_get\"):\n",
+    "    matplotlib.RcParams._get = dict.get\n",
     "from scipy import signal\n",
     "from matplotlib import pyplot as plt\n",
     "from ipywidgets import * # interactive plots\n",
