--- a/book/dasp/01_IR_Conv.ipynb
+++ b/book/dasp/01_IR_Conv.ipynb
@@ -26,6 +26,9 @@
     "import io\n",
     "from scipy.io import wavfile\n",
     "from pyodide.http import pyfetch\n",
+    "import matplotlib\n",
+    "if not hasattr(matplotlib.RcParams, \"_get\"):\n",
+    "    matplotlib.RcParams._get = dict.get\n",
     "from matplotlib import pyplot as plt\n",
     "from ipywidgets import * # interactive plots\n",
     "import IPython\n",
