--- a/book/fundamental/07_DFT.ipynb
+++ b/book/fundamental/07_DFT.ipynb
@@ -20,6 +20,9 @@
     "# Installing the packages\n",
     "%pip install ipympl\n",
     "import numpy as np \n",
+    "import matplotlib\n",
+    "if not hasattr(matplotlib.RcParams, \"_get\"):\n",
+    "    matplotlib.RcParams._get = dict.get\n",
     "from scipy import signal\n",
     "import io\n",
     "from scipy.io import wavfile\n",
