--- a/book/dasp/04_Z_domain.ipynb
+++ b/book/dasp/04_Z_domain.ipynb
@@ -12,16 +12,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [],
    "source": [
-    "{\n",
-    "    \"tags\": [\n",
-    "        \"hide_input\",\n",
-    "    ]\n",
-    "}\n",
-    "\n",
     "# Import the necessary packages as usual\n",
+    "\n",
     "%pip install ipympl\n",
     "import numpy as np \n",
     "import scipy as sp\n",
