--- a/book/dasp/04_Z_domain.ipynb
+++ b/book/dasp/04_Z_domain.ipynb
@@ -14,8 +14,7 @@
    "execution_count": null,
    "metadata": {
     "tags": [
-     "hide-input",
-     "thebe-init"
+     "thebe-remove-input-init"
     ]
    },
    "outputs": [],
