--- a/book/dasp/04_Z_domain.ipynb
+++ b/book/dasp/04_Z_domain.ipynb
@@ -26,8 +26,8 @@
     "import scipy as sp\n",
     "from scipy import signal\n",
     "import matplotlib\n",
-    "if not hasattr(matplotlib.RcParams, \"_get\"):\n",
-    "    matplotlib.RcParams._get = dict.get\n",
+    "# if not hasattr(matplotlib.RcParams, \"_get\"):\n",
+    "#     matplotlib.RcParams._get = dict.get\n",
     "from  matplotlib import patches\n",
     "from matplotlib.ticker import FormatStrFormatter\n",
     "import io\n",
