--- a/book/dasp/04_Z_domain.ipynb
+++ b/book/dasp/04_Z_domain.ipynb
@@ -166,7 +166,12 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "thebe-init",
+     "hide-input"
+    ]
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -391,7 +396,12 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "thebe-init;",
+     "hide-input"
+    ]
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -648,7 +658,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "thebe-init;",
+     "hide-input"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -796,7 +811,12 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "thebe-init;",
+     "hide-input"
+    ]
+   },
    "source": [
     "### Constrained Biquad filter\n",
     "\n",
@@ -986,13 +1006,6 @@
     "plt.tight_layout()\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
