--- a/book/experimental_notebook.ipynb
+++ b/book/experimental_notebook.ipynb
@@ -24,6 +24,9 @@
     "import scipy as sp\n",
     "import io\n",
     "from scipy.io import wavfile\n",
+    "import matplotlib\n",
+    "if not hasattr(matplotlib.RcParams, \"_get\"):\n",
+    "    matplotlib.RcParams._get = dict.get\n",
     "from pyodide.http import pyfetch\n",
     "from matplotlib import pyplot as plt\n",
     "from ipywidgets import * # interactive plots\n",
@@ -143,7 +146,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "acs_demos",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -157,7 +160,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.11.4"
   },
   "toc": {
    "base_numbering": 1,
