--- a/book/dasp/04_Z_domain.ipynb
+++ b/book/dasp/04_Z_domain.ipynb
@@ -398,7 +398,7 @@
    "execution_count": 8,
    "metadata": {
     "tags": [
-     "thebe-init;",
+     "thebe-init",
      "hide-input"
     ]
    },
@@ -660,7 +660,7 @@
    "execution_count": null,
    "metadata": {
     "tags": [
-     "thebe-init;",
+     "thebe-init",
      "hide-input"
     ]
    },
@@ -811,12 +811,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "tags": [
-     "thebe-init;",
-     "hide-input"
-    ]
-   },
+   "metadata": {},
    "source": [
     "### Constrained Biquad filter\n",
     "\n",
@@ -864,7 +859,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "thebe-init",
+     "hide-input"
+    ]
+   },
    "outputs": [
     {
      "data": {
