--- a/book/experimental_notebook.ipynb
+++ b/book/experimental_notebook.ipynb
@@ -14,7 +14,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "thebe-remove-input-init"
+    ]
+   },
    "outputs": [],
    "source": [
     "# Hit the live python code button and firstly run this cell to import several of the packages you may want to use.\n",
@@ -145,6 +149,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Tags",
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
