--- a/book/dasp/04_Z_domain.ipynb
+++ b/book/dasp/04_Z_domain.ipynb
@@ -168,8 +168,7 @@
    "execution_count": 7,
    "metadata": {
     "tags": [
-     "thebe-init",
-     "hide-input"
+     "thebe-init"
     ]
    },
    "outputs": [
@@ -398,8 +397,7 @@
    "execution_count": 8,
    "metadata": {
     "tags": [
-     "thebe-init",
-     "hide-input"
+     "thebe-init"
     ]
    },
    "outputs": [
@@ -660,8 +658,7 @@
    "execution_count": null,
    "metadata": {
     "tags": [
-     "thebe-init",
-     "hide-input"
+     "thebe-init"
     ]
    },
    "outputs": [
@@ -861,8 +858,7 @@
    "execution_count": null,
    "metadata": {
     "tags": [
-     "thebe-init",
-     "hide-input"
+     "thebe-init"
     ]
    },
    "outputs": [
