--- a/book/dasp/04_Z_domain.ipynb
+++ b/book/dasp/04_Z_domain.ipynb
@@ -11,10 +11,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "tags": [
-     "thebe-remove-input-init"
+     "thebe-init",
+     "hide-input"
     ]
    },
    "outputs": [],
@@ -57,7 +58,7 @@
     "    else:\n",
     "        data = data.astype(np.float32)  # already float\n",
     "    \n",
-    "    return data, fsb"
+    "    return data, fs"
    ]
   },
   {
@@ -1023,7 +1024,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "thebe-init"
+    ]
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1162,6 +1167,12 @@
     "# Filter the signal\n",
     "x_filt = signal.lfilter(b, a, x) # This one line command is how we filter x with filter coefficients (b,a)!\n",
     "\n",
+    "# Audio to listen\n",
+    "print('Original Signal:')\n",
+    "IPython.display.display(Audio(x.T, rate=fs,normalize=False))\n",
+    "print('Filtered Signal:')\n",
+    "IPython.display.display(Audio(x_filt.T, rate=fs,normalize=False))\n",
+    "\n",
     "# Plotting\n",
     "fig, ax = plt.subplot_mosaic([[\"top left\", \"top centre\"],[\"top left\", \"bottom centre\"]],figsize=(7.5,3))\n",
     "plt.subplots_adjust(wspace=0.5,hspace=0.4)\n",
@@ -1192,6 +1203,7 @@
     "ax[\"bottom centre\"].set_xlabel('Frequency (Hz)')\n",
     "ax[\"bottom centre\"].set_ylabel('Phase')\n",
     "plt.tight_layout()\n",
+    "plt.show()\n",
     "\n",
     "\n",
     "\n",
@@ -1204,15 +1216,7 @@
     "ax.set_ylabel('Amplitude')\n",
     "plt.tight_layout()\n",
     "ax.legend()\n",
-    "\n",
-    "print('Original Signal:')\n",
-    "IPython.display.display(Audio(x.T, rate=fs,normalize=False))\n",
-    "print('Filtered Signal:')\n",
-    "IPython.display.display(Audio(x_filt.T, rate=fs,normalize=False))\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "plt.show()\n"
    ]
   },
   {
@@ -1226,7 +1230,7 @@
  "metadata": {
   "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "acs_demos",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1240,7 +1244,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
