--- a/book/dasp/04_Z_domain.ipynb
+++ b/book/dasp/04_Z_domain.ipynb
@@ -815,7 +815,7 @@
    "source": [
     "### Constrained Biquad filter\n",
     "\n",
-    "A specific configuration of the biquad filter is to constrain it such that the poles and zeros lie on the same radial line, defined by angle $\\theta_o$ in the complex plane, i.e. $\\\\theta_{z} = \\theta_{p} = \\theta_o$. In this configuration, depending on the relative values of the magnitudes $r_z$ and $r_p$, the constrained biquad will behave as either a bandpass or a notch filter. The transfer function of the constrained biquad therefore simplifies to:\n",
+    "A specific configuration of the biquad filter is to constrain it such that the poles and zeros lie on the same radial line, defined by angle $\\theta_o$ in the complex plane, i.e. $\\theta_{z} = \\theta_{p} = \\theta_o$. In this configuration, depending on the relative values of the magnitudes $r_z$ and $r_p$, the constrained biquad will behave as either a bandpass or a notch filter. The transfer function of the constrained biquad therefore simplifies to:\n",
     "\n",
     "$$\n",
     "\\begin{align}\n",
@@ -833,6 +833,7 @@
     "$$\n",
     "\n",
     "The magnitude response of the constrained biquad is then given by\n",
+    "\n",
     "$$\n",
     "|H(e^{j\\omega T_s})|  =  \\frac{|(e^{j\\omega T_s}- r_ze^{j\\theta_o})| . |(e^{j\\omega T_s}- r_ze^{-j\\theta_o})|}{|(e^{j\\omega T_s}- r_pe^{j\\theta_o})| . |(e^{j\\omega T_s}- r_pe^{j-\\theta_o})|}\\nonumber \\\\\n",
     "$$\n",
@@ -1230,7 +1231,7 @@
  "metadata": {
   "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "acs_demos",
    "language": "python",
    "name": "python3"
   },
@@ -1244,7 +1245,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
