--- a/book/dasp/04_Z_domain.ipynb
+++ b/book/dasp/04_Z_domain.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "tags": [
      "thebe-init",
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "tags": [
      "thebe-init"
@@ -185,7 +185,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9b1ca06fc7a249c693926edede2d186c",
+       "model_id": "1b7a3931e3eb45b09e1b11fe106ee2f1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -199,7 +199,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9863f937db174a939cb239ff6f5098e3",
+       "model_id": "dae976553fa147b7b8a4246a4f3401d5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -276,7 +276,7 @@
     "\n",
     "\n",
     "# Create the interactive plot\n",
-    "def update(a1 = 0.5):\n",
+    "def first_order(a1 = 0.5):\n",
     "\n",
     "    # computing yn\n",
     "    for n in n_idx:\n",
@@ -290,7 +290,7 @@
     "    fig.canvas.draw_idle()\n",
     "\n",
     "print('Move the slider to change the value of a1, and hence the pole position in the complex plane.')\n",
-    "interact(update, a1 = (-1.2,1.2,0.01)); \n",
+    "interact(first_order, a1 = (-1.2,1.2,0.01)); \n",
     "\n",
     "\n"
    ]
