--- a/book/dasp/01_IR_Conv.ipynb
+++ b/book/dasp/01_IR_Conv.ipynb
@@ -15,7 +15,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "tags": [
+     "thebe-init",
+     "hide-input"
+    ]
    },
    "outputs": [],
    "source": [
@@ -340,8 +344,9 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "acs_demos",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -355,7 +360,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.11.4"
   },
   "toc": {
    "base_numbering": 1,
