--- a/book/dasp/02_FIR_design.ipynb
+++ b/book/dasp/02_FIR_design.ipynb
@@ -13,7 +13,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "tags": [
+     "hide-input",
+     "thebe-init"
+    ]
    },
    "outputs": [],
    "source": [
@@ -536,8 +540,9 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "acs_demos",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -551,7 +556,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.11.4"
   },
   "toc": {
    "base_numbering": 1,
