--- a/book/dasp/03_FilteringSignals.ipynb
+++ b/book/dasp/03_FilteringSignals.ipynb
@@ -12,7 +12,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "thebe-init",
+     "hide-input"
+    ]
+   },
    "outputs": [],
    "source": [
     "# Import the necessary packages as usual\n",
@@ -233,8 +238,9 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "acs_demos",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -248,7 +254,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
