--- a/book/fundamental/02_Complex_numbers.ipynb
+++ b/book/fundamental/02_Complex_numbers.ipynb
@@ -11,7 +11,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "thebe-init",
+     "hide-input"
+    ]
+   },
    "outputs": [],
    "source": [
     "# Starting once again with the imports.\n",
@@ -986,8 +991,9 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "acs_demos",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1001,7 +1007,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.11.4"
   },
   "toc": {
    "base_numbering": 1,
