--- a/book/fundamental/05_Fourier_Transform.ipynb
+++ b/book/fundamental/05_Fourier_Transform.ipynb
@@ -11,7 +11,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-input",
+     "thebe-init"
+    ]
+   },
    "outputs": [],
    "source": [
     "# Importing the packages as usual\n",
@@ -609,8 +614,9 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "acs_demos",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -624,7 +630,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.11.4"
   },
   "toc": {
    "base_numbering": 1,
