--- a/book/fundamental/09_Time_Freq_Analysis.ipynb
+++ b/book/fundamental/09_Time_Freq_Analysis.ipynb
@@ -13,7 +13,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "tags": [
+     "hide-input",
+     "thebe-init"
+    ]
    },
    "outputs": [],
    "source": [
@@ -408,8 +412,9 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "acs_demos",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -423,7 +428,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
