--- a/book/dasp/04_Z_domain.ipynb
+++ b/book/dasp/04_Z_domain.ipynb
@@ -1231,7 +1231,7 @@
  "metadata": {
   "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "acs_demos",
    "language": "python",
    "name": "python3"
   },
@@ -1245,7 +1245,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
