--- a/book/dasp/04_Z_domain.ipynb
+++ b/book/dasp/04_Z_domain.ipynb
@@ -11,14 +11,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "tags": [
      "thebe-init",
      "hide-input"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: ipympl in /Users/m19823/anaconda3/envs/acs_demos/lib/python3.8/site-packages (0.9.3)\n",
+      "Requirement already satisfied: ipython<9 in /Users/m19823/anaconda3/envs/acs_demos/lib/python3.8/site-packages (from ipympl) (8.12.3)\n",
+      "Requirement already satisfied: numpy in /Users/m19823/anaconda3/envs/acs_demos/lib/python3.8/site-packages (from ipympl) (1.24.4)\n",
+      "Requirement already satisfied: ipython-genutils in /Users/m19823/anaconda3/envs/acs_demos/lib/python3.8/site-packages (from ipympl) (0.2.0)\n",
+      "Requirement already satisfied: pillow in /Users/m19823/anaconda3/envs/acs_demos/lib/python3.8/site-packages (from ipympl) (10.2.0)\n",
+      "Requirement already satisfied: traitlets<6 in /Users/m19823/anaconda3/envs/acs_demos/lib/python3.8/site-packages (from ipympl) (5.14.1)\n",
+      "Requirement already satisfied: ipywidgets<9,>=7.6.0 in /Users/m19823/anaconda3/envs/acs_demos/lib/python3.8/site-packages (from ipympl) (8.1.1)\n",
+      "Requirement already satisfied: matplotlib<4,>=3.4.0 in /Users/m19823/anaconda3/envs/acs_demos/lib/python3.8/site-packages (from ipympl) (3.7.4)\n",
+      "Requirement already satisfied: backcall in /Users/m19823/anaconda3/envs/acs_demos/lib/python3.8/site-packages (from ipython<9->ipympl) (0.2.0)\n",
+      "Requirement already satisfied: decorator in /Users/m19823/anaconda3/envs/acs_demos/lib/python3.8/site-packages (from ipython<9->ipympl) (5.1.1)\n",
+      "Requirement already satisfied: jedi>=0.16 in /Users/m19823/anaconda3/envs/acs_demos/lib/python3.8/site-packages (from ipython<9->ipympl) (0.19.1)\n",
+      "Requirement already satisfied: matplotlib-inline in /Users/m19823/anaconda3/envs/acs_demos/lib/python3.8/site-packages (from ipython<9->ipympl) (0.1.6)\n",
+      "Requirement already satisfied: pickleshare in /Users/m19823/anaconda3/envs/acs_demos/lib/python3.8/site-packages (from ipython<9->ipympl) (0.7.5)\n",
+      "Requirement already satisfied: prompt-toolkit!=3.0.37,<3.1.0,>=3.0.30 in /Users/m19823/anaconda3/envs/acs_demos/lib/python3.8/site-packages (from ipython<9->ipympl) (3.0.43)\n",
+      "Requirement already satisfied: pygments>=2.4.0 in /Users/m19823/anaconda3/envs/acs_demos/lib/python3.8/site-packages (from ipython<9->ipympl) (2.17.2)\n",
+      "Requirement already satisfied: stack-data in /Users/m19823/anaconda3/envs/acs_demos/lib/python3.8/site-packages (from ipython<9->ipympl) (0.6.3)\n",
+      "Requirement already satisfied: typing-extensions in /Users/m19823/anaconda3/envs/acs_demos/lib/python3.8/site-packages (from ipython<9->ipympl) (4.13.2)\n",
+      "Requirement already satisfied: pexpect>4.3 in /Users/m19823/anaconda3/envs/acs_demos/lib/python3.8/site-packages (from ipython<9->ipympl) (4.9.0)\n",
+      "Requirement already satisfied: appnope in /Users/m19823/anaconda3/envs/acs_demos/lib/python3.8/site-packages (from ipython<9->ipympl) (0.1.3)\n",
+      "Requirement already satisfied: comm>=0.1.3 in /Users/m19823/anaconda3/envs/acs_demos/lib/python3.8/site-packages (from ipywidgets<9,>=7.6.0->ipympl) (0.2.1)\n",
+      "Requirement already satisfied: widgetsnbextension~=4.0.9 in /Users/m19823/anaconda3/envs/acs_demos/lib/python3.8/site-packages (from ipywidgets<9,>=7.6.0->ipympl) (4.0.9)\n",
+      "Requirement already satisfied: jupyterlab-widgets~=3.0.9 in /Users/m19823/anaconda3/envs/acs_demos/lib/python3.8/site-packages (from ipywidgets<9,>=7.6.0->ipympl) (3.0.9)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in /Users/m19823/anaconda3/envs/acs_demos/lib/python3.8/site-packages (from matplotlib<4,>=3.4.0->ipympl) (1.1.1)\n",
+      "Requirement already satisfied: cycler>=0.10 in /Users/m19823/anaconda3/envs/acs_demos/lib/python3.8/site-packages (from matplotlib<4,>=3.4.0->ipympl) (0.12.1)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in /Users/m19823/anaconda3/envs/acs_demos/lib/python3.8/site-packages (from matplotlib<4,>=3.4.0->ipympl) (4.47.2)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in /Users/m19823/anaconda3/envs/acs_demos/lib/python3.8/site-packages (from matplotlib<4,>=3.4.0->ipympl) (1.4.5)\n",
+      "Requirement already satisfied: packaging>=20.0 in /Users/m19823/anaconda3/envs/acs_demos/lib/python3.8/site-packages (from matplotlib<4,>=3.4.0->ipympl) (23.2)\n",
+      "Requirement already satisfied: pyparsing>=2.3.1 in /Users/m19823/anaconda3/envs/acs_demos/lib/python3.8/site-packages (from matplotlib<4,>=3.4.0->ipympl) (3.1.1)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in /Users/m19823/anaconda3/envs/acs_demos/lib/python3.8/site-packages (from matplotlib<4,>=3.4.0->ipympl) (2.8.2)\n",
+      "Requirement already satisfied: importlib-resources>=3.2.0 in /Users/m19823/anaconda3/envs/acs_demos/lib/python3.8/site-packages (from matplotlib<4,>=3.4.0->ipympl) (6.1.1)\n",
+      "Requirement already satisfied: zipp>=3.1.0 in /Users/m19823/anaconda3/envs/acs_demos/lib/python3.8/site-packages (from importlib-resources>=3.2.0->matplotlib<4,>=3.4.0->ipympl) (3.17.0)\n",
+      "Requirement already satisfied: parso<0.9.0,>=0.8.3 in /Users/m19823/anaconda3/envs/acs_demos/lib/python3.8/site-packages (from jedi>=0.16->ipython<9->ipympl) (0.8.3)\n",
+      "Requirement already satisfied: ptyprocess>=0.5 in /Users/m19823/anaconda3/envs/acs_demos/lib/python3.8/site-packages (from pexpect>4.3->ipython<9->ipympl) (0.7.0)\n",
+      "Requirement already satisfied: wcwidth in /Users/m19823/anaconda3/envs/acs_demos/lib/python3.8/site-packages (from prompt-toolkit!=3.0.37,<3.1.0,>=3.0.30->ipython<9->ipympl) (0.2.13)\n",
+      "Requirement already satisfied: six>=1.5 in /Users/m19823/anaconda3/envs/acs_demos/lib/python3.8/site-packages (from python-dateutil>=2.7->matplotlib<4,>=3.4.0->ipympl) (1.16.0)\n",
+      "Requirement already satisfied: executing>=1.2.0 in /Users/m19823/anaconda3/envs/acs_demos/lib/python3.8/site-packages (from stack-data->ipython<9->ipympl) (2.0.1)\n",
+      "Requirement already satisfied: asttokens>=2.1.0 in /Users/m19823/anaconda3/envs/acs_demos/lib/python3.8/site-packages (from stack-data->ipython<9->ipympl) (2.4.1)\n",
+      "Requirement already satisfied: pure-eval in /Users/m19823/anaconda3/envs/acs_demos/lib/python3.8/site-packages (from stack-data->ipython<9->ipympl) (0.2.2)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
     "# Import the necessary packages as usual\n",
     "\n",
@@ -168,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "tags": [
      "thebe-init"
@@ -185,7 +231,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1b7a3931e3eb45b09e1b11fe106ee2f1",
+       "model_id": "1c8a50cbf7424d469b49f35bc2681b10",
        "version_major": 2,
        "version_minor": 0
       },
@@ -199,7 +245,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dae976553fa147b7b8a4246a4f3401d5",
+       "model_id": "b15929a3d2db45f3bf59a69e165ee1bd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -415,7 +461,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9666360db5934ec3b3e2d7552491a01e",
+       "model_id": "8e7cfb9563974e9d8399e2eebf008329",
        "version_major": 2,
        "version_minor": 0
       },
@@ -429,7 +475,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ba94889fbcf64119ad737fec7f6de2f6",
+       "model_id": "861f931ec8304b9ea3becb8e4382cbca",
        "version_major": 2,
        "version_minor": 0
       },
@@ -675,7 +721,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6b680838911b4a0a8d7fa195ec6e7de2",
+       "model_id": "a9f368944b614e3aa933081f6e44128d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -689,7 +735,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3335919d52b844b8a20f1873e6b1dcbf",
+       "model_id": "71ea8f1db9e54347b39648cd6509599b",
        "version_major": 2,
        "version_minor": 0
       },
