--- a/book/dasp/05_CombFilters.ipynb
+++ b/book/dasp/05_CombFilters.ipynb
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "b120ee1d",
    "metadata": {},
    "outputs": [
@@ -445,6 +445,13 @@
     }
    ],
    "source": [
+    "# Initial parameters\n",
+    "fs = 5000                     # sampling frequency (Hz)\n",
+    "N_samples = 4000             # total number of samples\n",
+    "n = np.arange(0,N_samples,1)  # This sets up a vector of the sample indices\n",
+    "x = np.zeros(N_samples);      # initial input\n",
+    "x[20] = 1                    # This makes x an impulse\n",
+    "\n",
     "fig, axes = plt.subplot_mosaic([[\"top left\", \"top centre\"],[\"top left\", \"bottom centre\"]],figsize=(7.5,3))\n",
     "plt.subplots_adjust(wspace=0.5,hspace=0.4)\n",
     "\n",
@@ -535,7 +542,7 @@
     "        \n",
     "    return \n",
     "\n",
-    "N_s    = IntSlider(min=1, max=400, step=1, value=0, description='N')\n",
+    "N_s    = IntSlider(min=1, max=200, step=1, value=0, description='N')\n",
     "g_s    = FloatSlider(min=0, max=1.2, step=0.01, value=0.9, description='g')\n",
     "\n",
     "out = interactive_output(update, {'N': N_s, 'g': g_s} ); \n",
