--- a/book/experimental_notebook.ipynb
+++ b/book/experimental_notebook.ipynb
@@ -16,7 +16,8 @@
    "execution_count": null,
    "metadata": {
     "tags": [
-     "thebe-remove-input-init"
+     "thebe-init",
+     "hide-input"
     ]
    },
    "outputs": [],
@@ -41,6 +42,9 @@
     "# function for reading WAV files from a URL. Must be a RAW link, not GitHub HTML\n",
     "speech_sample = \"https://raw.githubusercontent.com/randyaliased/acspjbook/main/book/audio/F2.wav\"\n",
     "impulse_resp = \"https://raw.githubusercontent.com/randyaliased/acspjbook/main/book/audio/IR1.wav\"\n",
+    "bass_sample = \"https://raw.githubusercontent.com/randyaliased/acspjbook/main/book/audio/bass_sample.wav\"\n",
+    "pan_sample = \"https://raw.githubusercontent.com/randyaliased/acspjbook/main/book/audio/pan_sample.wav\"\n",
+    "\n",
     "\n",
     "async def read_wav_from_url(url):\n",
     "    response = await pyfetch(url)\n",
@@ -151,7 +155,7 @@
  "metadata": {
   "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "acs_demos",
    "language": "python",
    "name": "python3"
   },
@@ -165,7 +169,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.8.18"
   },
   "toc": {
    "base_numbering": 1,
