--- a/book/fundamental/05_Fourier_Transform.ipynb
+++ b/book/fundamental/05_Fourier_Transform.ipynb
@@ -616,7 +616,7 @@
  "metadata": {
   "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "acs_demos",
    "language": "python",
    "name": "python3"
   },
@@ -630,7 +630,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.8.18"
   },
   "toc": {
    "base_numbering": 1,
